src/objects/Talon__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsSoldOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSoldOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsZa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsZa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>Talon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Talon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>